tolk-tester/tests/invalid-syntax/err-3035.tolk
const a = (1) <=> (0) ^ 8;

/**
@compilation_should_fail
@stderr ^ has lower precedence than <=>
*/
